<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="@dimen/title_text_size"

        tools:layout_editor_absoluteY="34dp"
        android:layout_marginRight="@dimen/margin_constant"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="@dimen/margin_constant"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/btn_dolares_to_pesos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_dolares_to_pesos_btn"
        android:onClick="pesosToDolares"

        tools:layout_editor_absoluteY="189dp"
        android:layout_marginLeft="@dimen/margin_btn_left"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="@dimen/margin_constant" />

    <Button
        android:id="@+id/btn_pesos_to_dolares"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_btn"

        android:text="@string/text_pesos_to_dolares_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_editor_absoluteY="189dp"
        android:layout_marginRight="@dimen/margin_constant"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <EditText
        android:id="@+id/input_pesos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_constant"
        android:layout_marginRight="@dimen/margin_constant"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintHorizontal_bias="0.947"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="114dp" />

    <EditText
        android:id="@+id/input_dolares"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_constant"
        android:layout_marginRight="@dimen/margin_constant"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintHorizontal_bias="0.947"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="276dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_pesos_textview"
        android:textSize="@dimen/textview_text_size"
        tools:layout_editor_absoluteX="34dp"
        tools:layout_editor_absoluteY="122dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textview_text_size"
        android:text="@string/text_dolares_textview"
        tools:layout_editor_absoluteY="286dp"
        tools:layout_editor_absoluteX="34dp" />

</LinearLayout>